# compress_3d_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  draco_decode.cpp  draco_decode.h  draco_encode.cpp  draco_encode.h
data/: README.md
